<resources>
    <string name="app_name">Search Classes</string>
    <string name="contentDescription">x</string>
    <string name="search_user">Search Subject / Activity</string>
    <string name="location">Location</string>
    <string name="lets_play">LET\'S PLAY!</string>
    <string name="lets_study">LET\'S STUDY!</string>
    <string name="subject">Maths</string>
    <string name="city">Ahmedabad</string>
    <string name="count">01</string>
    <string name="board">\u2022 Board</string>
    <string name="standard">\u2022 Standard</string>
    <string name="stream">\u2022 Stream</string>
    <string name="add_stream">Stream</string>
    <string name="location_add">Location Preferences</string>
    <string name="location_note">Choose from popular areas or enter your own</string>
    <string name="button_txt">More filter</string>
    <string name="popular">POPULAR</string>
    <string name="price">PRICE</string>
    <string name="sort">SORT</string>
    <string name="filter">FILTER</string>
    <string name="tutor">Tutor / Tution Class</string>
    <string name="session_detail">Class</string>
    <string name="teacher_detail">Teacher</string>
    <string name="session_type">Type</string>
    <string name="session_detail_name">Subject</string>
    <string name="session_stream">Stream</string>
    <string name="email">Email id</string>
    <string name="phone">Phone</string>
    <string name="session_reviews">Reviews</string>
    <string name="user_name">Felicia Richi Bwown</string>
    <string name="book_session">BOOK NOW</string>
    <string name="class_search">SEARCH</string>
    <string name="search_string">City</string>
    <string name="search_session">Subject</string>
    <string name="search_stream">Stream</string>
    <string name="search_MF">M/F</string>
    <string name="search_class">Class Name</string>
    <string name="teacher">Teacher Name</string>
    <string name="comment_hint">Write Your Comment</string>
    <string name="login"><u><b>Login</b></u></string>
    <string name="sortby">SORT BY</string>
    <string name="most_recent">Most Recent</string>
    <string name="addsession">Add Class</string>
    <string name="my_Account">My Payments</string>
    <string name="my_session">Upcoming Classes</string>
    <string name="my_enroll">My Enrollment</string>
    <string name="my_profile">My Profile</string>
    <string name="my_change_pass">Change Password</string>
    <string name="reviews">Reviews</string>
    <string name="logout">Logout</string>
    <string name="addchildsopuse">Add Family Contacts</string>
    <string name="mycontanct">My Contacts</string>
    <string name="agevalidation">Date of Birth should be > 1year .</string>
    <string name="close">DONE</string>
    <string name="click_here"><b>Click Here</b></string>
    <string name="checkboc_text">All-inclusive price(coupon &amp; wallet applied)</string>
    <string name="payment">Payment</string>
    <string name="selection_info">Select a contact to enroll. </string>
    <string name="view_term">View</string>
    <string name="internet_error">Internet Connection !</string>
    <string name="internet_connection_error">ClassSafari requires an internet connection.Make sure wi-fi or mobile networks are turned on, then try again.</string>
    <string name="something_wrong">Something wrong</string>
    <string name="blank">Blank filed not allowed</string>
    <string name="false_msg">Record not found</string>
    <string name="true_msg">Send successfully</string>
    <string name="validation_msg">Enter proper value</string>
    <string name="fail_msg">Class you are trying to book is already full.Please try another class</string>
    <string name="alert_msg">Alert msg</string>
    <string name="ok">OK</string>
    <string name="home"><b>Home</b></string>
    <string name="or"><b> OR </b></string>
    <string name="user_id">Email Address</string>
    <string name="user_pass">Password</string>
    <string name="register_str">Don\’t have an account?</string>
    <string name="register">Register</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_no">Phone Number</string>
    <string name="about_us">About Us</string>
    <string name="qualification">Qualification</string>
    <string name="family_register1">REGISTRATION</string>
    <string name="forgot">Forgot Password</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="session_time">Add Class Time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="area">Area</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="description">Description</string>
    <string name="alert">Alert</string>
    <string name="session_name">Class Name</string>
    <string name="session_standard">Standard</string>
    <string name="search_board">Board</string>
    <string name="payment_success">ENROLLMENT SUCCESSFULL</string>
    <string name="payment_report">Payment Report</string>
    <string name="search_standard">Standard</string>
    <string name="session_board">Board</string>
    <string name="address">Address</string>
    <string name="duration">Duration</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="present">P</string>
    <string name="absent">A</string>
    <string name="leave">L</string>
    <string name="remarks">Remarks</string>
    <string name="free_radio">Free</string>
    <string name="paid_radio">Paid</string>
    <string name="recurring">Recurring</string>
    <string name="single">Single</string>
    <string name="academic">Academic</string>
    <string name="play">Activity</string>
    <string name="saving">Savings</string>
    <string name="current">Current</string>
    <string name="family_regi">Family</string>
    <string name="teacher_regi">Teacher</string>
    <string name="add_Student">ADD CONTACT</string>
    <string name="age">Age</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="select">Select From List</string>
    <string name="add_name">NAME</string>
    <string name="add_age">AGE</string>
    <string name="add_gender">GENDER</string>
    <string name="add_no">NUMBER</string>
    <string name="child">CHILD</string>
    <string name="family_name">Family Name</string>
    <string name="up">\u2303</string>
    <string name="down">\u2304</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="session_price">Class Price</string>
    <string name="s_subject">Subject</string>
    <string name="batch_time">Time</string>
    <string name="total_student">Students</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="sports">No of Students</string>
    <string name="sports1">Open Spot</string>
    <string name="add_familyname">Family Name</string>
    <string name="family_list">My Contacts</string>
    <string name="address1">Address line 1</string>
    <string name="address2">Address line 2</string>
    <string name="strIAccTermsAndCond">I accept the terms and conditions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="nav_item_activity_titles">
        <item>CLASS CALENDAR</item>
        <item>ADD CLASS</item>
        <item>BANK DETAILS</item>
        <item>MY PROFILE</item>
        <item>PAYMENT REPORT</item>
        <item>STUDENT ATTENDANCE</item>
        
        
    </string-array>
    <string-array name="color">
        <item>#f2552c</item>
        <item>#dccc43</item>
        <item>#3db45c</item>
    </string-array>
    <string name="googleplus_sha">DF:DD:F8:1D:1F:BA:43:06:D3:92:25:F5:39:28:E1:3C:3F:FA:8C:06</string>
    <string name="facebook_app_id">155683868477558</string>
    <string name="fb_login_protocol_scheme">fb155683868477558</string>
    <string name="strSuccess">Success  </string>
    <string name="strYourTranSucc">Your Transaction was successful</string>
    <string name="strValue">Value</string>
    <string name="strEntMobNum">Enter mobile number</string>
    <string name="strStartDate">Start Date</string>
    <string name="strEndDate">End Date</string>
    <string name="strShow">Show</string>
    <string name="strEnterRegdMobNum">Enter your registered email address</string>
    <string name="strRegdMobNum">Registered Email Address</string>
    <string name="strSendOtp">Send</string>
    <string name="strConfirmPin">Confirm Pin/Password</string>
    <string name="strChangePwd">CHANGE PASSWORD</string>
    <string name="strCancel">CANCEL</string>
    <string name="strPinPwd">Pin/Password</string>
    <string name="strPinDoNotMatch">Pin do not match. Please try again</string>
    <string name="strPinUpdated">Your New Pin has been updated successfully</string>
    <string name="strOtpNotMatch">Enter OTP does not match. Please try again</string>
    <string name="strPlEnterPin">Please enter Pin</string>
    <string name="strOtpMesgText">Code has been sent to your registered number. Enter the code to verify your account.</string>
    <string name="sessionName">Please enter class name</string>
    <string name="boardName">Please enter board</string>
    <string name="standardName">Please enter standard</string>
    <string name="streamName">Please enter stream name</string>
    <string name="lessonName">Please enter subject name</string>
    <string name="sessionTime">Please add class time</string>
    <string name="sessionAddress">Please enter class address</string>
    <string name="sessionArea">Please enter class area</string>
    <string name="sessionCity">Please enter class city</string>
    <string name="sessionState">Please enter class state</string>
    <string name="sessionZipcode">Please enter zipcode</string>
    <string name="sessionCapacity">Please enter class capacity</string>
    <string name="sessionAmount">Please enter class price</string>
    <string name="Date">Please select class start date and end date should be same</string>
    <string name="newPassword">Enter new password</string>
    <string name="changPassword">Your password changed succesfully</string>
    <string name="confirmpassword">Confirm new password</string>
    <string name="currentpassword">Enter current password</string>
    <string name="updateteacher">Update profile successfully</string>
    <string name="blank_value">Please select activity / subject</string>
    <string name="location_validation">Please select proper location</string>
    <string name="rating_header">How was your experience?</string>
    <string name="rating_row">How much do you like this class?</string>
    <string name="not_loging">you are not login</string>
    <string name="class_type">Please select class</string>
    <string name="loginmsg">Please login to continue</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_name">Name on Account</string>
    <string name="account_number">Account Number</string>
    <string name="code">IFSC Code</string>
    <string name="kyc">Please send KYC document to</string>
    <string name="kyc_mail">kyc@searchclasses.in</string>
    <string name="bank_sucees">Bank details added successfully</string>
    <string name="bank_usucees">Bank details updated successfully</string>
    <string name="pan_card">\u2022 PAN Card</string>
    <string name="addhar_card">\u2022 AADHAR Card</string>
    <string name="cheqck">\u2022 CANCEL Cheque</string>
</resources>