<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_170sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/_170sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/person_image"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:src="@drawable/user" />

        <TextView
            android:id="@+id/user_name_txt"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_30sdp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingTop="@dimen/_2sdp"
            android:text="Megha"
            android:textColor="@color/text_color"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnMySession"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_1sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:background="@color/white"
        android:gravity="start|center_vertical"
        android:paddingLeft="@dimen/_10sdp"
        android:text="@string/my_session"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_12sdp"
        android:visibility="visible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginRight="@dimen/_3sdp"
        android:background="@color/gray" />

    <Button
        android:id="@+id/btnMyReport"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_3sdp"
        android:background="@color/white"
        android:gravity="start|center_vertical"
        android:paddingLeft="@dimen/_10sdp"
        android:text="@string/my_Account"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_12sdp"
        android:visibility="visible" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginRight="@dimen/_3sdp"
        android:background="@color/gray" />


    <Button
        android:id="@+id/btnmyfamily"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_3sdp"
        android:background="@color/white"
        android:gravity="start|center_vertical"
        android:paddingLeft="@dimen/_10sdp"
        android:text="@string/mycontanct"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_12sdp"
        android:visibility="visible" />
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0.1dp"-->
        <!--android:layout_marginRight="@dimen/_3sdp"-->
        <!--android:background="@color/gray" />-->


    <Button
        android:id="@+id/btnaddChild"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_3sdp"
        android:background="@color/white"
        android:gravity="start|center_vertical"
        android:paddingLeft="@dimen/_10sdp"
        android:text="@string/addchildsopuse"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_12sdp"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginRight="@dimen/_3sdp"
        android:background="@color/gray" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_3sdp"
        android:background="@color/white"
        android:gravity="start|center_vertical"
        android:paddingLeft="@dimen/_10sdp"
        android:text="@string/my_change_pass"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_12sdp"
        android:visibility="visible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginRight="@dimen/_3sdp"
        android:background="@color/gray" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_3sdp"
        android:background="@color/white"
        android:gravity="start|center_vertical"
        android:paddingLeft="@dimen/_10sdp"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_12sdp"
        android:visibility="visible" />
</LinearLayout>
</layout>