<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/add_student_bg"
        tools:context="com.adms.classsafari.Activites.AddStudentScreen">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/blue"
            android:elevation="@dimen/_5sdp"
            android:theme="@style/ThemeOverlay.AppCompat.Light">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="left"
                android:src="@drawable/white_arrow" />

            <TextView
                android:id="@+id/add_student_txt"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_25sdp"
                android:gravity="center"
                android:text="@string/add_Student"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/first_name_edt"
                style="@style/AutoComplete"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:drawableRight="@drawable/user_white"
                android:hint="@string/first_name" />

            <EditText
                android:id="@+id/last_name_edt"
                style="@style/AutoComplete"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:drawableRight="@drawable/user_white"
                android:hint="@string/last_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/age_edt"
                    style="@style/AutoComplete"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_weight="1"
                    android:drawableRight="@drawable/age"
                    android:hint="@string/age" />

                <EditText
                    android:id="@+id/gender_edt"
                    style="@style/AutoComplete"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_weight="1"
                    android:drawableRight="@drawable/gender"
                    android:hint="@string/gender" />
            </LinearLayout>

            <EditText
                android:id="@+id/phone_no_edt"
                style="@style/AutoComplete"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:drawableRight="@drawable/mobile"
                android:hint="@string/phone_no" />
        </LinearLayout>

        <Button
            android:id="@+id/add_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_below="@+id/linear1"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/login_btn"
            android:text="ADD"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:id="@+id/or_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_btn"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/or_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_120sdp"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/select_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/or_linear"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/select_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/_90sdp"
                android:gravity="center"
                android:text="@string/select"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lv_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/select_linear"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            android:visibility="visible">

            <include layout="@layout/add_student_header" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/lv_header"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/select_student_rcView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none" />
        </LinearLayout>
    </RelativeLayout>
</layout>